<resources>
    <string name="app_name">mainAssignment</string>
    <string name="LoginTitle">TRADENAPP</string>
    <string name="FindServices">Find services near you</string>
    <string name="FindServicesDescription">Search for local and international services and\n browse different categories</string>
    <string name="Customize">Customize your needs</string>
    <string name="CustomizeDescription">Ask for what you want through our instant\n customized request</string>
    <string name="Community">Community Instantly</string>
    <string name="CommunityDescription">No need to wait and communicate with\n service providers instantly</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Skip">Skip</string>
    <string name="Name">NAME</string>
    <string name="Name_hint">Name</string>
    <string name="Email">EMAIL ADDRESS / PHONE NUMBER</string>
    <string name="Email_hint">eg: kshitij@tradenapp.com or +91 7550169360</string>
    <string name="GET_OTP">Get OTP</string>
    <string name="verify">VERIFY EMAIL/PHONE</string>
    <string name="OTP">OTP</string>
    <string name="OTP_hint">Enter OTP received</string>
    <string name="verify_OTP">Verify OTP</string>
    <string name="change_data">Change email/phone number</string>
    <string name="resend">RESEND OTP</string>
    <string name="password">PASSWORD</string>
    <string name="password_hint">Password</string>
    <string name="Confirm_password">CONFIRM PASSWORD</string>
    <string name="Confirm_password_hint">Repeat Password</string>
    <string name="agreement">I agree with all Terms &amp; Conditions</string>
    <string name="register_as_service_provider">Register me as a service provider</string>
    <string name="already">Already have an account? Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="not_member_sign_up">Not a member yet? Sign up now</string>
</resources>
