<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25sp"
            android:layout_height="34dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="50sp"
            android:gravity="center_vertical"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50sp"
            android:textColor="@color/Theme"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/SignUp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/Name_hint"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/Email_hint"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:layout_marginTop="15sp"
        android:layout_gravity="center"
        android:textSize="10sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/White"
        android:textAllCaps="false"
        android:text="@string/SignUp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/Purple"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OTP" />

    <EditText
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:hint="@string/OTP_hint"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:layout_marginTop="15sp"
        android:layout_gravity="center"
        android:textSize="10sp"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:text="@string/verify_OTP" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_data"
            android:textColor="@color/Purple"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/resend"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>