<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25sp"
            android:layout_height="34dp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="50sp"
            android:gravity="center_vertical"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50sp"
            android:textColor="@color/Theme"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/SignUp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:text="@string/Name" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="13sp"
        android:textColorHint="@color/black"
        android:hint="@string/Name_hint"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="10sp"
        android:textColorHint="@color/black"
        android:hint="@string/Email_hint"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="10sp"
        android:textColorHint="@color/black"
        android:hint="@string/password_hint"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="10sp"
        android:textColorHint="@color/black"
        android:hint="@string/Confirm_password_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textStyle="bold"
            android:textColor="@color/Purple"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_as_service_provider"
            android:textColor="@color/Purple"
            android:layout_marginLeft="5sp"
            android:textStyle="bold"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:paddingLeft="10sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="300sp"
        android:layout_height="45sp"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/White"
        android:textAllCaps="false"
        android:text="@string/SignUp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="50sp"
        android:text="@string/already"
        android:textColor="@color/Purple"
        android:textStyle="bold"/>
</LinearLayout>